--- a/eventsAPI/Pipfile
+++ b/eventsAPI/Pipfile
@@ -11,6 +11,7 @@ flask-sqlalchemy = "*"
 flask-marshmallow = "*"
 marshmallow-sqlalchemy = "*"
 pipfile = "*"
+python-dotenv = "*"
 
 [requires]
 python_version = "3.7"
