Adding test for create_event and get_all_events #5

--- a/eventsAPI/Pipfile
+++ b/eventsAPI/Pipfile
@@ -12,6 +12,7 @@ flask-marshmallow = "*"
 marshmallow-sqlalchemy = "*"
 pipfile = "*"
 python-dotenv = "*"
+flask-api = "*"
 
 [requires]
 python_version = "3.7"
