Adding coverage and Update .gitignore

--- a/eventsAPI/Pipfile
+++ b/eventsAPI/Pipfile
@@ -13,6 +13,7 @@ marshmallow-sqlalchemy = "*"
 pipfile = "*"
 python-dotenv = "*"
 flask-api = "*"
+coverage = "*"
 
 [requires]
 python_version = "3.7"
